frontend/tree.css
body {
  font-family: sans-serif;
  background: #fafafa;
  margin: 20;
}

svg {
  width: 100%;
  height: 90%;
  border: 1px solid #999; 
}

.node circle {
  fill: #69b3a2;
  stroke: #333;
  stroke-width: 1.5px;
}

.node text {
  font-size: clamp(10px, 1.2vw, 16px);
}

.link {
  fill: none;
  stroke: #ccc;
  stroke-width: 1.5px;
}

